--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- header -->
     <header>
         <div class="logo">
-            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
+            <a href="index.html"><img src="./images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <!-- loading -->
@@ -35,7 +35,7 @@
         </div>
     </div>
     <main>
-        <!--  -->
+        <!-- Localisation -->
         <div class="location">
             <i class="fas fa-map-marker-alt local__icon"></i>
             <p> Paris, Belleville</p>
@@ -46,7 +46,7 @@
                 <div class="reservation">
                     <h2>Réserver le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button class="btn"><a href="#">Explorer nos restaurants</a></button>
+                    <a class="btn" href="#">Explorer nos restaurants</a>
                 </div>
             </section>
             <!-- steps -->
@@ -77,9 +77,9 @@
                 <h2>Restaurants</h2>
                 <div class="cards">
                     <div class="card">
-                        <a href="la_palette_du_gout.html">
+                        <a href="./pages/la_palette_du_gout.html">
                             <div class="card__img">
-                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat">
                                 <span class="card__new">Nouveau</span>
                             </div>
                             <div class="card__container">
@@ -95,9 +95,9 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="la_note_enchantee.html">
+                        <a href="./pages/la_note_enchantee.html">
                             <div class="card__img">
-                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat">
                                 <span class="card__new">Nouveau</span>
                             </div>
                             <div class="card__container">
@@ -113,9 +113,9 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="a_la_française.html">
+                        <a href="./pages/a_la_française.html">
                             <div class="card__img">
-                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat">
                             </div>
                             <div class="card__container">
                                 <div class="card__description">
@@ -130,9 +130,9 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="le_delice_du_sens.html">
+                        <a href="./pages/le_delice_du_sens.html">
                             <div class="card__img">
-                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat">
                             </div>
                             <div class="card__container">
                                 <div class="card__description">
