--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -14,26 +14,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
     <header>
-        <a class="arrow" href="index.html">
+        <a class="arrow" href="../index.html">
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="logo">
-            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
+            <a href="index.html"><img src="../images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <main>
         <div class="menu--img">
-            <img class="menu--img" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="platImage">
+            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="platImage">
         </div>
         <div class="menu">
             <div class="menu__header">
-                <h2>Le délice des sens</h2>
+                <h2>La note enchantée</h2>
                 <div class="heart">
                     <i class="far fa-heart heart-unfill"></i>
                     <i class="fas fa-heart heart-fill"></i>
@@ -46,8 +45,8 @@
                         <div class="box delay-1">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Tartare de thon</h3>
-                                    <p>Assaisonné au yuzu</p>
+                                    <h3>Ravioles de foie gras </h3>
+                                    <p>Accompagnés de leur crème à la truffe</p>
                                 </div>
                                 <div class="price">
                                     <p>25<span>€</span></p>
@@ -60,8 +59,8 @@
                         <div class="box delay-2">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Bouchée de homard croustillant </h3>
-                                    <p>Et sa farandole de petits légumes</p>
+                                    <h3>Caviar osciètre </h3>
+                                    <p>Sur blini à la farine de blé noir</p>
                                 </div>
                                 <div class="price">
                                     <p>35<span>€</span></p>
@@ -74,11 +73,25 @@
                         <div class="box delay-3">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Velouté de cèpes </h3>
-                                    <p>Aux truffes</p>
+                                    <h3>Homard et espuma de potiron</h3>
+                                    <p>Mariné aux zestes d'orange</p>
                                 </div>
                                 <div class="price">
                                     <p>20<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-4">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Foie gras de canard cuit entier</h3>
+                                    <p>Confiture de figue et pain toasté</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
                                 </div>
                             </div>
                             <div class="check">
@@ -90,11 +103,11 @@
                 <section class="menu__dishes">
                     <h2 class="menu__title--categorie">PLATS</h2>
                     <div class="box-list">
-                        <div class="box delay-4">
+                        <div class="box delay-5">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Poulet rôti aux herbes de Provence </h3>
-                                    <p>Et sa crème de truffe</p>
+                                    <h3>Noix de coquilles Saint-Jacques</h3>
+                                    <p>Sur lit de purée de céleri-rave</p>
                                 </div>
                                 <div class="price">
                                     <p>40<span>€</span></p>
@@ -104,11 +117,11 @@
                                 <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="box delay-5">
+                        <div class="box delay-6">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Langouste rôtie </h3>
-                                    <p>Et ses légumes de saison</p>
+                                    <h3>Langoustine poêlée</h3>
+                                    <p>Purée de patate douce</p>
                                 </div>
                                 <div class="price">
                                     <p>35<span>€</span></p>
@@ -118,11 +131,11 @@
                                 <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="box delay-6">
+                        <div class="box delay-7">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Côte de boeuf Angus </h3>
-                                    <p>Et sa purée de panais</p>
+                                    <h3>Mijoté de queue de boeuf </h3>
+                                    <p>Et riz sauvage aux zestes de citron</p>
                                 </div>
                                 <div class="price">
                                     <p>44<span>€</span></p>
@@ -137,11 +150,11 @@
                 <section class="menu__desserts">
                     <h2 class="menu__title--categorie">DESSERTS</h2>
                     <div class="box-list">
-                        <div class="box delay-7">
+                        <div class="box delay-8">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Farandole de desserts</h3>
-                                    <p>Du chef</p>
+                                    <h3>Macaron noisette et chocolat</h3>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
                                 </div>
                                 <div class="price">
                                     <p>18<span>€</span></p>
@@ -151,11 +164,11 @@
                                 <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="box delay-8">
+                        <div class="box delay-9">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Crème brulée</h3>
-                                    <p>Revisitée</p>
+                                    <h3>Baba au rhum revisité </h3>
+                                    <p>Avec son coulis de citron</p>
                                 </div>
                                 <div class="price">
                                     <p>22<span>€</span></p>
@@ -165,11 +178,11 @@
                                 <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="box delay-9">
+                        <div class="box delay-10">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Tiramisu </h3>
-                                    <p>À la noisette</p>
+                                    <h3>Tarte au citron meringuée </h3>
+                                    <p>Déstructurée</p>
                                 </div>
                                 <div class="price">
                                     <p>23<span>€</span></p>
@@ -183,7 +196,7 @@
                 </section>
             </div>
             <div class="menu__btn">
-                <button class="btn"><a href="#">Commander</a></button>
+                <a class="btn order" href="#">Commander</a>
             </div>
         </div>
     </main>
@@ -210,7 +223,6 @@
                             Mentions légales
                         </a>
                     </p>
-
                 </li>
                 <li>
                     <p class="footer__text">
