--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -14,25 +14,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
     <header>
-        <a class="arrow" href="index.html">
+        <a class="arrow" href="../index.html">
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="logo">
-            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
+            <a href="index.html"><img src="../images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <main>
         <div class="menu--img">
-            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="platImage">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="platImage">
         </div>
         <div class="menu">
             <div class="menu__header">
-                <h2>À la française</h2>
+                <h2>La palette du goût</h2>
                 <div class="heart">
                     <i class="far fa-heart heart-unfill"></i>
                     <i class="fas fa-heart heart-fill"></i>
@@ -45,8 +45,8 @@
                         <div class="box delay-1">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Tartare de poulpe acidulé</h3>
-                                    <p>Aux zests d'orange</p>
+                                    <h3>Fricassée d'escargot</h3>
+                                    <p>Au piment d'Espelette </p>
                                 </div>
                                 <div class="price">
                                     <p>25<span>€</span></p>
@@ -59,8 +59,8 @@
                         <div class="box delay-2">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Velouté de légumes d'antan</h3>
-                                    <p>Carotte, panais, topinambour</p>
+                                    <h3>Foie gras de canard mi-cuit</h3>
+                                    <p>Et ses copeaux de truffe noire</p>
                                 </div>
                                 <div class="price">
                                     <p>35<span>€</span></p>
@@ -73,8 +73,8 @@
                         <div class="box delay-3">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Soupe à l'oignon</h3>
-                                    <p>Revisitée</p>
+                                    <h3>Oeuf au plat</h3>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                                 <div class="price">
                                     <p>20<span>€</span></p>
@@ -92,8 +92,8 @@
                         <div class="box delay-4">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Coquilles Saint-Jacques</h3>
-                                    <p>Accompagnées d'une purée de panais</p>
+                                    <h3>Filet de boeuf aux herbes</h3>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
                                 </div>
                                 <div class="price">
                                     <p>40<span>€</span></p>
@@ -106,8 +106,8 @@
                         <div class="box delay-5">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Magret de canard</h3>
-                                    <p>Et parmentier de pommes de terre</p>
+                                    <h3>Parmentier de queue de boeuf</h3>
+                                    <p>À la truffe noire sur sa purée de panais</p>
                                 </div>
                                 <div class="price">
                                     <p>35<span>€</span></p>
@@ -120,8 +120,8 @@
                         <div class="box delay-6">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                    <h3>Filet de turbot</h3>
+                                    <p>Aux agrumes</p>
                                 </div>
                                 <div class="price">
                                     <p>44<span>€</span></p>
@@ -139,8 +139,8 @@
                         <div class="box delay-7">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Pétales de violettes glacés</h3>
-                                    <p>Et purée de noisettes</p>
+                                    <h3>Paris-Brest</h3>
+                                    <p>Revisité</p>
                                 </div>
                                 <div class="price">
                                     <p>18<span>€</span></p>
@@ -153,8 +153,8 @@
                         <div class="box delay-8">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Fondant au chocolat</h3>
-                                    <p>Revisité</p>
+                                    <h3>Macaron au chocolat d'exception </h3>
+                                    <p>Et glace à la vanille de Madagascar</p>
                                 </div>
                                 <div class="price">
                                     <p>22<span>€</span></p>
@@ -167,8 +167,8 @@
                         <div class="box delay-9">
                             <div class="box__container">
                                 <div class="box__content">
-                                    <h3>Millefeuille croustillant</h3>
-                                    <p>Myrtilles et pâte d’amande</p>
+                                    <h3>Mousse au chocolat </h3>
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
                                 </div>
                                 <div class="price">
                                     <p>23<span>€</span></p>
@@ -182,7 +182,7 @@
                 </section>
             </div>
             <div class="menu__btn">
-                <button class="btn order"><a href="#">Commander</a></button>
+                <a class="btn order" href="#">Commander</a>
             </div>
         </div>
     </main>
@@ -209,6 +209,7 @@
                             Mentions légales
                         </a>
                     </p>
+
                 </li>
                 <li>
                     <p class="footer__text">
